--- a/form.html
+++ b/form.html
@@ -28,18 +28,18 @@
     <input  type="radio" name="love" value="unman">阴阳人
     </div>
     <div class="hobby"> 
-      <label >取向:</label>
-    <input  type="checkbox" name="hobby" value="man">dota2
-    <input  type="checkbox" name="hobby" value="woman">魔兽世界
-    <input  type="checkbox" name="hobby" value="unman">王者荣耀
+      <label >爱好:</label>
+    <input  type="checkbox" name="hobby" value="dota2">dota2
+    <input  type="checkbox" name="hobby" value="wow">魔兽世界
+    <input  type="checkbox" name="hobby" value="xiaoxueshen">王者荣耀
     </div>
     <div class="city">
       <label for="city">你在哪个牛逼的城市：</label>
       <select name="city">
       <option id="city" name="city" value="beijing">北京</option>
-      <option id="city" name="city" value="beijing">上海</option>
-      <option id="city" name="city" value="beijing">成都</option>
-      <option id="city" name="city" value="beijing">其他</option>
+      <option id="city" name="city" value="shanghai">上海</option>
+      <option id="city" name="city" value="chendu">成都</option>
+      <option id="city" name="city" value="other">其他</option>
       </select>
     </div>
     <div class="textarea"> 
