--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
   <title>徐鑫的表单</title>
 </head>
 <body>
-<div class="form">
+<div class="form" style="width:100%;text-align:center">
   <form class="form" name="denglu" action="/abc" method="post">
     <div class="name"> 
       <label for="name">姓名:</label>
