--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
   <title>徐鑫的表单</title>
 </head>
 <body>
+<a href="form.css" id="ct">123</a>
 <div class="form" >
   <form class="form" name="denglu" action="/abc" method="post">
     <div class="name"> 
