--- a/css常用属性/LM.html
+++ b/css常用属性/LM.html
@@ -49,8 +49,8 @@ a.LM{
 <div class="layout">
   <div class="LM">
     <img src="http://pic101.nipic.com/file/20160618/19350689_110531950000_2.jpg" alt="联盟logo" class="LM">
-    <h3 class="LM"><a href="https://baike.so.com/doc/5682873-24425861.html" class="LM">联盟</a></h3>
-    <p class="LM"><a href="https://baike.so.com/doc/5682873-24425861.html" class="LM">高贵的联盟种族，崇尚力量、牺牲、荣耀、传承、正义、公正，无数的成员将他们的科学技术、魔法奥秘和精神智慧贡献给了联盟，旨在建立一个和平公正的世界，并在这片伟大的土地上贯彻他们的信念。</a></p>
+    <h3 class="LM"><a href="https://baike.so.com/doc/5682873-24425861.html" target="_blank" class="LM">联盟</a></h3>
+    <p class="LM"><a href="https://baike.so.com/doc/5682873-24425861.html" target="_blank" title="高贵的联盟种族，崇尚力量、牺牲、荣耀、传承、正义、公正，无数的成员将他们的科学技术、魔法奥秘和精神智慧贡献给了联盟，旨在建立一个和平公正的世界，并在这片伟大的土地上贯彻他们的信念。"  class="LM">高贵的联盟种族，崇尚力量、牺牲、荣耀、传承、正义、公正，无数的成员将他们的科学技术、魔法奥秘和精神智慧贡献给了联盟，旨在建立一个和平公正的世界，并在这片伟大的土地上贯彻他们的信念。</a></p>
     </div>
   <div class="BFC">
       <img src="http://img.douxie.com/upload/image/cxf/3yt/3U15BBCaU8KV84D1No79.jpg" alt="联盟logo" class="BFC">
