--- a/漂亮的登录框.html
+++ b/漂亮的登录框.html
@@ -28,7 +28,7 @@
   </div>
   <footer class="wrapper">
       <p class="statement">Love.ly Personal Blog .PSD Template 
-        <a href="www.baidu.com" class="copyright footerlink">Copyright ©2012 Matt Gentile</a><br>
+        <a href="https://baidu.com" class="copyright footerlink">Copyright ©2012 Matt Gentile</a><br>
         <a href="" class="ad footerlink">Love.ly Home</a><span> |</span>
         <a href="" class="ad footerlink">Bolg</a><span> |</span>
         <a href="" class="ad footerlink">Work</a><span> |</span>
