--- a/JQuery操作.html
+++ b/JQuery操作.html
@@ -130,6 +130,6 @@
         </div>
     </div>
 </body>
-<script src='./javaScript/jquery-3.3.1.min.js'></script>
-<script src='./javaScript/JQuery.js'></script>
+<script src='./javaScript/jquery-3.3.1.min.js' type='text/javascript'></script>
+<script src='./javaScript/JQuery.js type='text/javascript''></script>
 </html>
