--- a/JQuery操作.html
+++ b/JQuery操作.html
@@ -131,5 +131,5 @@
     </div>
 </body>
 <script src='./javaScript/jquery-3.3.1.min.js' type='text/javascript'></script>
-<script src='./javaScript/JQuery.js type='text/javascript''></script>
+<script src='./javaScript/JQuery.js' type='text/javascript'></script>
 </html>
