--- a/漂亮的登录框.html
+++ b/漂亮的登录框.html
@@ -36,4 +36,6 @@
         <a href="" class="ad footerlink">Contact Me</a></p>
   </footer>
 </body>
+<script src='./javaScript/jquery-3.3.1.min.js' type='text/javascript'></script>
+<script src='./javaScript/form.js' type='text/javascript'></script>  
 </html>
