--- a/天气程序.html
+++ b/天气程序.html
@@ -10,7 +10,7 @@
         <div class="wrapper">
             <div class="content">
                 <div class="flex location">
-                    <h3 class="city">未定位|<span>亲，每天都关注关注天气哦~</span></h3>
+                    <h3 class="city">未定位|<span class="tips">亲，每天都关注关注天气哦~</span></h3>
                     <div class="position">
                         <a href="#"  class="iconfont icon-064dangqianweizhi"></a>
                         <p class="countries">未知 中国</p> 
@@ -28,19 +28,19 @@
                 <li class="today clearfix">
                     <div class="weatherPhoto">
                         <img src="//weixin.jirengu.com/images/weather/code/0.png" alt="">
-                        <p>?mph / ??<sup>&#176;</sup></p>
+                        <p class="windspeed">?mph / ??<sup>&#176;</sup></p>
                     </div>
                     <div class="describe">
                         <h1 class="temperature">??<sup>&#176;</sup></h1>
                         <a href="#" class="date">Monday 周一</a>
                     </div>
                 </li>
-                <li class="ohterday"><a href="#" class="date">TUE</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p>??<sup>&#176;</sup></p></li>
-                <li class="ohterday"><a href="#" class="date">WED</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p>??<sup>&#176;</sup></p></li>
-                <li class="ohterday"><a href="#" class="date">THU</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p>??<sup>&#176;</sup></p></li>
-                <li class="ohterday"><a href="#" class="date">FRI</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p>??<sup>&#176;</sup></p></li>
-                <li class="ohterday"><a href="#" class="date">SAT</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p>??<sup>&#176;</sup></p></li>
-                <li class="ohterday"><a href="#" class="date">SUN</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p>??<sup>&#176;</sup></p></li>
+                <li class="ohterday"><a href="#" class="date">TUE</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p class="futuretemperature">??<sup>&#176;</sup></p></li>
+                <li class="ohterday"><a href="#" class="date">WED</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p class="futuretemperature">??<sup>&#176;</sup></p></li>
+                <li class="ohterday"><a href="#" class="date">THU</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p class="futuretemperature">??<sup>&#176;</sup></p></li>
+                <li class="ohterday"><a href="#" class="date">FRI</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p class="futuretemperature">??<sup>&#176;</sup></p></li>
+                <li class="ohterday"><a href="#" class="date">SAT</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p class="futuretemperature">??<sup>&#176;</sup></p></li>
+                <li class="ohterday"><a href="#" class="date">SUN</a><br><img src="//weixin.jirengu.com/images/weather/code/0.png" alt=""><p class="futuretemperature">??<sup>&#176;</sup></p></li>
             </ul>
         </div>
         <script src="./JavaScript/jquery-3.3.1.min.js"></script>
