--- a/天气程序.html
+++ b/天气程序.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"> 
         <title>天气程序</title>
         <link rel="stylesheet" href="css/weather.css">
-        <link rel="stylesheet" href="//at.alicdn.com/t/font_580882_6vu44l83ii442t9.css">
+        <link rel="stylesheet" href="//at.alicdn.com/t/font_580882_yh5ngzmcf8ncdi.css">
     </head>
     <body>
         <div class="wrapper">
@@ -21,8 +21,15 @@
                     <li class="action"><span class="iconfont icon-shouye"></span><a href="#" class="action navlink">WEATHER</a></li>
                     <li><span class="iconfont icon-zhifeiji"></span><a href="#" class="navlink">NEWS&ENVENTS</a></li>
                     <li><span class="iconfont icon-tupian"></span><a href="#" class="navlink">GALLERY(30)</a></li>
+                    <ul class="btnct">
+                    </ul>
                 </ul>   
                 <img class="backgroundimg" src="./img/风景6.jpg" alt="">
+                <img class="backgroundimg" src="./img/风景7.jpg" alt="">
+                <img class="backgroundimg" src="./img/风景8.jpg" alt="">
+                <img class="backgroundimg" src="./img/风景9.jpg" alt="">
+                <div class="next iconfont icon-youfanye-xue"></div>
+                <div class="pre iconfont icon-zuofanye-xue"></div>
             </div>
             <ul class="weatherDay">
                 <li class="today clearfix">
