--- a/js.html
+++ b/js.html
@@ -2,24 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8"> 
-<title>轮播</title>
-<link rel="stylesheet" href="./css/carousel.css">
+<title>瀑布流</title>
+<link rel="stylesheet" href="./css/waterfull.css">
 </head>
 <body>
-<div class="window">
-  <ul class="photoct">
-    <li class="photoli"><img src="./img/风景1.jpg" alt="" class="photo"></li>
-    <li class="photoli"><img src="./img/风景2.jpg" alt="" class="photo"></li>
-    <li class="photoli"><img src="./img/风景3.jpg" alt="" class="photo"></li>
-    <li class="photoli"><img src="./img/风景4.jpg" alt="" class="photo"></li>
-  </ul>
-
-  <button class="next">></button>
-  <button class="pre"><</button>
-  <ul class="page">
-  </ul>
-</div>
+  <div class="ct">
+    <a href="" class="standardWidth"></a>
+  </div>
+  <div class="bottom">fsfdfs</div>
 </body>
 <script src="./JavaScript/jquery-3.3.1.min.js"></script>
-<script src="./JavaScript/carousel.js"></script>
+<script src="./JavaScript/waterfull.js"></script>
 </html>
