--- a/天气程序.html
+++ b/天气程序.html
@@ -14,7 +14,7 @@
                     <div class="position">
                         <a href="#"  class="iconfont icon-064dangqianweizhi"></a>
                         <p class="countries">未知 中国</p> 
-                        <p class="time">??:?? ??</p>
+                        <div class="time">??:?? ??<div class="tfhourct">24小时制<input type="checkbox" class="tfhour" name ="tfhour" value="true"></div></div>
                     </div>
                 </div>
                 <ul class="nav">
