封装天气获取，轮播，瀑布流。增加24小时制转换

--- a/js.html
+++ b/js.html
@@ -6,10 +6,10 @@
 <link rel="stylesheet" href="./css/waterfull.css">
 </head>
 <body>
-  <div class="ct">
+  <div class="wrapper">
     <a href="" class="standardWidth"></a>
   </div>
-  <div class="bottom">fsfdfs</div>
+  <div class="bottom2">fsfdfs</div>
 </body>
 <script src="./JavaScript/jquery-3.3.1.min.js"></script>
 <script src="./JavaScript/waterfull.js"></script>
